# m3u-shuf

./: .gitignore  Cargo.toml  README.md
src/: main.rs
testdata/: basic.m3u  windows_newline.m3u
